ncc/testsuite/positive/iface.n
interface I_Comparable_To ['a]
  {
    compare (_ : 'a) : int;
  }

interface I_Test_Overload ['a]
  {
    set (_ : int) : void;
    set (_ : float) : void;
  }

  
interface A { foo () : void; 
}
interface B : A { new foo() : void; }

class C : B {
  public foo () : void { }
  public foo1 () : void implements A.foo  {}
}
  