ncc/testsuite/negative/type-access.n
module M1 {
  private class C {
  public mutable z : int;
  }
}

module M2 {
  f (_ : M1.C) : void {} // E: inaccessible type `M1.C'
}
